# rust-axum-template

./: .env.local  Cargo.toml  README.md
migrations/2024-03-18-025201_init/: down.sql  up.sql
src/: main.rs
src/common/: mod.rs  repository.rs  schema.rs
src/common/errors/: api_error_response.rs  application_error.rs  authentication_error.rs  db_error.rs  global_api_error.rs  mod.rs  request_error.rs
src/common/extract/: request.rs
src/common/models/: models.rs
src/common/security/: jwt.rs  middleware.rs  mod.rs
src/common/utils/: constants.rs  cookie.rs  header_utils.rs  mod.rs
src/config/: app_env.rs  diesel_config.rs  jwt_config.rs  mod.rs
src/domains/: mod.rs
src/domains/applications/: api_models.rs  db_models.rs  handlers.rs  mod.rs  repository.rs  services.rs
src/domains/auth/: api_models.rs  handlers.rs  mod.rs
src/domains/favicon/: favicon.rs  mod.rs
src/domains/organisations/: api_models.rs  db_models.rs  handlers.rs  mod.rs  repository.rs  services.rs
src/domains/users/: api_models.rs  db_models.rs  handlers.rs  mod.rs  repository.rs  services.rs
src/middleware/: layers.rs  mod.rs  services.rs
