[package]
name = "rust-axum-template"
version = "0.1.0"
edition = "2021"
authors = ["Divit"]
rust-version = "1.76.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.5", features = ["default", "macros"] }
axum-extra = { version = "0.9.3", features = ["cookie"] }
hyper = { version = "1.2.0", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.5.2", features = ["trace", "request-id", "util", "auth"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
tokio = { version = "1.37.0", features = ["full"] }
tokio-postgres = "0.7.10"
jsonwebtoken = "9.3.0"
postgres = "0.19.7"
postgres-types = "0.2.6"
chrono = { version = "0.4.35", features = ["serde"] }
time = "0.3.34"
uuid = { version = "1.8.0", features = ["v4", "v7", "serde"] }
dotenv = "0.15.0"
futures = "0.3.30"
regex = "1.10.3"
lazy_static = "1.4.0"
http = "1.1.0"
validator = { version = "0.18.1", features = ["derive"] }
argon2 = "0.5.3"
headers = "0.4.0"

bb8 = "0.8.3"

# This is a C binding library, need to install library on pc/server
# For Debian/Ubuntu: sudo apt install libpq-dev
diesel = { version = "2.1.5", default-features = false, features = ["uuid","postgres", "chrono"] }
diesel-async = { version = "0.4.1", features = ["postgres", "bb8"] }
diesel_codegen = { version = "0.16.1", features = ["postgres"] }
diesel_infer_schema = { version="1.4.0", features=["postgres"] }

log = "0.4.21"

[dev-dependencies]
faux = "^0.1"

# https://doc.rust-lang.org/cargo/reference/profiles.html
[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true # Can update to thin if it takes too long
debug-assertions = false
codegen-units = 1 # Can update to 16 if it takes too long
panic = 'unwind'
incremental = false
overflow-checks = false